--- a/UI/my_quizes.html
+++ b/UI/my_quizes.html
@@ -8,15 +8,15 @@
 		My Questions
 	</title>
 
-	<link rel="stylesheet" type="text/css" href="css/cssmodule.css"></link>
-	<script src="js/modulejs.js"></script>
+	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
+	<script src="modulejs.js"></script>
 
 </head>
 
 <body>
 
 <ul>
-  <li><img class="logo-image-for-profile" src="images/logo.jpeg"></li>
+  <li><img class="logo-image-for-profile" src="logo.jpeg"></li>
   <li><a for="navigation"  href="profile.html">Home</a></li>
   <li><a for="navigation" href="recent_questions.html">Recent Questions</a></li>
   <li><a for="navigation" class="active" href="my_quizes.html">My questions</a></li>
@@ -29,19 +29,18 @@
 </ul>
 
 <div class="large-scrollable-content">
-   <hr>
+  <hr>
   <center><span class="page-heading">You are viewing all the questions you have posted</span></center>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt Me &gt Another one of my questions</textarea>
+  <table>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+  </table>
  
   
 </div>
