--- a/UI/profile.html
+++ b/UI/profile.html
@@ -8,15 +8,15 @@
 		My profile
 	</title>
 
-	<link rel="stylesheet" type="text/css" href="css/cssmodule.css"></link>
-	<script src="js/modulejs.js"></script>
+	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
+	<script src="modulejs.js"></script>
 
 </head>
 
 <body>
 
 <ul>
-  <li><img class="logo-image-for-profile" src="images/logo.jpeg"></li>
+  <li><img class="logo-image-for-profile" src="logo.jpeg"></li>
   <li><a for="navigation" class="active" href="profile.html">Home</a></li>
   <li><a for="navigation" href="recent_questions.html">Recent Questions</a></li>
   <li><a for="navigation" href="my_quizes.html">My questions</a></li>
@@ -30,18 +30,23 @@
 
 <div class="large-scrollable-content">
   <hr>
-  <center><span class="page-heading">Your Recent Questions:click on a question see thread</span></center>
-  <textarea readonly="True">Another one of my questions</textarea>
-  <textarea readonly="True">Another one of my questions</textarea>
-  <textarea readonly="True">Another one of my questions</textarea>
-  <textarea readonly="True">Another one of my questions</textarea>
+  <center><span class="page-heading">Your Recent Questions:double click on a question see thread</span></center>
+  <table>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea>
+    </td></tr>
+  </table>
+  
   <hr>
-  <center><span class="page-heading">Your most answerd Questions:click on a question see thread</span></center>
-  <textarea readonly="True">Another one of my questions</textarea>
-  <textarea readonly="True">Another one of my questions</textarea>
-  <textarea readonly="True">Another one of my questions</textarea>
-  <hr>
-  <center><span class="page-heading">And Finally your activity log:</span></center>
+  <center><span class="page-heading">Your most answered Questions:doule click on a question see thread</span></center>
+  <table>  
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+  </table>
   <table>
     <tr><td>Questions you posted:</td><td>8</td></tr>
     <tr><td>Answers you posted:</td><td>8</td></tr>
