--- a/UI/recent_questions.html
+++ b/UI/recent_questions.html
@@ -8,15 +8,15 @@
 		Recently asked
 	</title>
 
-	<link rel="stylesheet" type="text/css" href="css/cssmodule.css"></link>
-	<script src="js/modulejs.js"></script>
+	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
+	<script src="modulejs.js"></script>
 
 </head>
 
 <body>
 
 <ul>
-  <li><img class="logo-image-for-profile" src="images/logo.jpeg"></li>
+  <li><img class="logo-image-for-profile" src="logo.jpeg"></li>
   <li><a for="navigation"  href="profile.html">Home</a></li>
   <li><a for="navigation" class="active" href="recent_questions.html">Recent Questions</a></li>
   <li><a for="navigation" href="my_quizes.html">My questions</a></li>
@@ -30,17 +30,15 @@
 
 <div class="large-scrollable-content">  
 <center><span class="page-heading">You are viewing recent questions people have posted</span></center>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-  <textarea readonly="True"> &lt User X &gt Another one of my questions</textarea>
-
+  <table>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    <tr class="links_to_answers" ondblclick="goToAnswers();"><td class="poster_name">Dickson Mirikwa: 12/8/2018 1.30 PM</td><td><textarea readonly="True">A question asked</textarea></td></tr>
+    </table>
 </body>
 </html>
