--- a/UI/signup.html
+++ b/UI/signup.html
@@ -8,8 +8,8 @@
 		log in
 	</title>
 
-	<link rel="stylesheet" type="text/css" href="css/cssmodule.css"></link>
-	<script src="js/modulejs.js"></script>
+	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
+	<script src="modulejs.js"></script>
 
 </head>
 
@@ -18,7 +18,7 @@
 
 	<div class="input-panel" for="signup">
 		<p class="page-heading">StackOverFlow_Lite</p>
-		<form action="index.html" method="post">
+		<form action="index.html" method="post" onsubmit="signUp();">
 			<input type="text" id="first-name" name="first-name" placeholder="First Name">
 			<input type="text" id="second-name" name="second-name" placeholder="Second Name">
 			<input type="text" id="user-email" name="email" placeholder="Email">
