--- a/ask.html
+++ b/ask.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<title>
-		search
+		Post
 	</title>
 
 	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
