--- a/ask.html
+++ b/ask.html
@@ -16,6 +16,26 @@
 <body>
 
 
+<!--mobile navigation -->
+
+<div class="mobilenav">
+	<a for="mobilenav" href="javascript:void(0);" class="showing" onclick="mobileMenu();">
+		<i class="fa fa-bars icon"></i>
+	</a>
+	<div id="mobileLinks">
+		<a for="mobilenav" href="profile.html">Home</a>
+		<a for="mobilenav" href="recent_questions.html">Recent questions</a>
+		<a for="mobilenav" href="my_quizes.html">My questions</a>
+		<a for="mobilenav" href="most_answered.html">Most answered</a>
+		<a for="mobilenav" href="search.html">search</a>
+		<a for="mobilenav" href="profile.html">my recent questions</a>
+		<a for="mobilenav" href="ask.html">Post a question</a>
+	</div>
+</div>
+
+
+<!--End of mobile navigation -->
+
 	
 
 
