--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</title>
 
 	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="modulejs.js"></script>
 
 </head>
