Add mobile navigation menu

--- a/UI/ask.html
+++ b/UI/ask.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<title>
-		search
+		Post
 	</title>
 
 	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
@@ -15,6 +15,26 @@
 
 <body>
 
+
+<!--mobile navigation -->
+
+<div class="mobilenav">
+	<a for="mobilenav" href="javascript:void(0);" class="showing" onclick="mobileMenu();">
+		<i class="fa fa-bars icon"></i>
+	</a>
+	<div id="mobileLinks">
+		<a for="mobilenav" href="profile.html">Home</a>
+		<a for="mobilenav" href="recent_questions.html">Recent questions</a>
+		<a for="mobilenav" href="my_quizes.html">My questions</a>
+		<a for="mobilenav" href="most_answered.html">Most answered</a>
+		<a for="mobilenav" href="search.html">search</a>
+		<a for="mobilenav" href="profile.html">my recent questions</a>
+		<a for="mobilenav" href="ask.html">Post a question</a>
+	</div>
+</div>
+
+
+<!--End of mobile navigation -->
 
 	
 
