--- a/UI/index.html
+++ b/UI/index.html
@@ -9,6 +9,7 @@
 	</title>
 
 	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="modulejs.js"></script>
 
 </head>
@@ -16,7 +17,7 @@
 <body>
 	<div class="input-panel">
 		<p class="page-heading">StackOverFlow_Lite</p>
-		<form action="profile.html" method="post" onsubmit="logIn();">
+		<form action="profile.html" onsubmit="logIn();">
 			<input type="text" id="username" name="username" placeholder="username or email">
 			<input type="password" id="pass" name="password" placeholder="password">
 			<input type="submit" value="Log In">
