--- a/UI/signup.html
+++ b/UI/signup.html
@@ -9,6 +9,7 @@
 	</title>
 
 	<link rel="stylesheet" type="text/css" href="cssmodule.css"></link>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="modulejs.js"></script>
 
 </head>
@@ -18,7 +19,7 @@
 
 	<div class="input-panel" for="signup">
 		<p class="page-heading">StackOverFlow_Lite</p>
-		<form action="index.html" method="post" onsubmit="signUp();">
+		<form action="index.html" onsubmit="signUp();">
 			<input type="text" id="first-name" name="first-name" placeholder="First Name">
 			<input type="text" id="second-name" name="second-name" placeholder="Second Name">
 			<input type="text" id="user-email" name="email" placeholder="Email">
